# problema-de-valor-inicial

./: mkdocs.yml  pyproject.toml
docs/: index.md
projetinho/: main.py
