[tool.poetry]
name = "ipv"
version = "0.1.0"
description = "resolução de problemas de valor inicial"
authors = ["jefferson <deyvis356@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9.7"
matplotlib = "^3.5.1"
numpy = "^1.22.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
